--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -17,13 +17,13 @@
                    [opened]="mobileQuery.matches ? 'false' : 'true'">
         <mat-nav-list>
         
-          <a mat-list-item [routerLink]="['/distribuidores/']">Inicio</a>
-          <a mat-list-item [routerLink]="['/distribuidores/datoscliente/']">Datos generales de Clientes</a>
-          <a mat-list-item [routerLink]="['/distribuidores/consultaprecios/']">Consulta de Precios</a>
-          <a mat-list-item [routerLink]="['/distribuidores/consultapedidos/']">Consulta de Pedidos</a>
-          <a mat-list-item [routerLink]="['/distribuidores/relacionpedidos/']">Relación de Pedidos</a>
-          <a mat-list-item [routerLink]="['/distribuidores/estadocuenta/']">Estado de Cuenta</a>
-          <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']">Ventas por Artículo</a>
+          <a mat-list-item [routerLink]="['/distribuidores/']"> <span class="font_side">Inicio</span></a>
+          <a mat-list-item [routerLink]="['/distribuidores/datoscliente/']"><span class="font_side">Datos generales de Clientes</span></a>
+          <a mat-list-item [routerLink]="['/distribuidores/consultaprecios/']"><span class="font_side">Consulta de Precios</span></a>
+          <a mat-list-item [routerLink]="['/distribuidores/consultapedidos/']"><span class="font_side">Consulta de Pedidos</span></a>
+          <a mat-list-item [routerLink]="['/distribuidores/relacionpedidos/']"><span class="font_side">Relación de Pedidos</span></a> 
+          <a mat-list-item [routerLink]="['/distribuidores/estadocuenta/']"><span class="font_side">Estado de Cuenta</span></a>
+          <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']"><span class="font_side">Ventas por Artículo</span></a>
           
         </mat-nav-list>
       </mat-sidenav>
