--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -35,3 +35,10 @@
    font-family:"Quicksand-SemiBold"  ;
 
 }
+
+.font_side{
+   color: #003f66;
+   font-size: 22px ;
+   font-family:"Quicksand-SemiBold";
+}
+
